welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: not found: value problem
		return problem; 
                       ^monkeyTrouble:4: error: not found: value bsmile
	} else if(aSmile!=bsmile){
                          ^monkeyTrouble:5: error: not found: value problem
		return problem;
                       ^monkeyTrouble:4: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if(aSmile!=bsmile){
               ^