welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if(aSmile==bSmile){
		return problem; 
	} else if(aSmile!=bsmile){
		return problem;
	}
	
}
